// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompleteListButtons calls handleMerge when Merge is selected 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="complete-list-refresh"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="redo-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
        />
      </svg>
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="complete-list-merge"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="compress-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3 32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
        />
      </svg>
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CompleteListButtons renders refresh disabled when user is not owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-disabled btn btn-link"
      data-test-id="complete-list-refresh"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="redo-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
        />
      </svg>
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CompleteListButtons renders refresh enabled when user is owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="complete-list-refresh"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="redo-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
        />
      </svg>
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;
